force-app/main/default/objects/OutboundQueue__c/OutboundQueue__c.object-meta.xml
<CustomObject>
    <description>Outbound Queue</description>
    <label>Outbound Queue</label>
    <nameField>
        <displayFormat>O-{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>Outbound Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>