force-app/main/default/objects/OutboundQueue__c/fields/ChannelType__c.field-meta.xml
<CustomField>
    <fullName>ChannelType__c</fullName>
    <label>Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queue</fullName>
                <default>true</default>
                <label>Queue</label>
            </value>
            <value>
                <fullName>PubSub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>