force-app/main/default/objects/OutboundQueue__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Record Id</description>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>