force-app/main/default/objects/OutboundQueue__c/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Id</label>
    <type>Text</type>
</CustomField>