force-app/main/default/objects/OutboundQueue__c/fields/Retries__c.field-meta.xml
<CustomField>
    <fullName>Retries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of retries</description>
    <label>Retries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>