force-app/main/default/objects/OutboundQueue__c/fields/SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SequenceNumber__c</fullName>
    <description>Message received Sequence Number</description>
    <label>Sequence Number</label>
    <type>AutoNumber</type>
</CustomField>